# trayfreq-qt

./: CMakeLists.txt  cpufreq.qrc  freqtray.cpp  freqtray.h  main.cpp
